test/src/e2e_vm_tests/test_programs/should_fail/mutable_fn_args_impl_self/src/main.sw
script;

struct S {}

impl S {
  fn foo(mut self) {}
  fn bar(self, mut data: u64) {}
}

fn main() {}